--- a/sandBox.html
+++ b/sandBox.html
@@ -6,12 +6,13 @@
     <title>Title</title>
 </head>
 <body>
-<div id="game container"></div>
+<button type="button" id="mutate-btn" onclick="mc()">Mutate</button>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"></script>
 <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
 <script type="text/javascript" src="lib/box2d.umd.js"></script>
 <script type="text/javascript" src="lib/camera.js"></script>
 <script type="text/javascript" src="lib/seedrandom.js"></script>
+<script type="text/javascript" src="trainer/mutationner.js"></script>
 <script type="text/javascript" src="creature/Node.js"></script>
 <script type="text/javascript" src="creature/Muscle.js"></script>
 <script type="text/javascript" src="creature/Creature.js"></script>
