Trainer in a worker

--- a/sandBox.html
+++ b/sandBox.html
@@ -6,20 +6,21 @@
     <title>Title</title>
 </head>
 <body>
+<input type="text" id="campos">
 <button type="button" id="clone-btn" onclick="clone()">Clone</button>
 <button type="button" id="mutate-btn" onclick="mc()">Mutate</button>
 <button type="button" id="random-creature-btn" onclick="addRandomCreature()">Add</button>
+<button type="button" id="renew-btn" onclick="triggerRenew()">Renew</button>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"></script>
 <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
 <script type="text/javascript" src="lib/box2d.umd.js"></script>
 <script type="text/javascript" src="lib/camera.js"></script>
 <script type="text/javascript" src="lib/seedrandom.js"></script>
-<script type="text/javascript" src="trainer/mutationner.js"></script>
-<script type="text/javascript" src="trainer/runner.js"></script>
-<script type="text/javascript" src="trainer/trainer.js"></script>
 <script type="text/javascript" src="creature/Node.js"></script>
 <script type="text/javascript" src="creature/Muscle.js"></script>
 <script type="text/javascript" src="creature/Creature.js"></script>
+<script type="text/javascript" src="trainer/mutationner.js"></script>
+<script type="text/javascript" src="trainer/runner.js"></script>
 <script type="text/javascript" src="sandBox.js"></script>
 </body>
 </html>
