Make it watchable

--- a/sandBox.html
+++ b/sandBox.html
@@ -11,6 +11,8 @@
 <button type="button" id="mutate-btn" onclick="mc()">Mutate</button>
 <button type="button" id="random-creature-btn" onclick="addRandomCreature()">Add</button>
 <button type="button" id="renew-btn" onclick="triggerRenew()">Renew</button>
+Best : <input type="text" id="best">
+Generation : <input type="text" id="gen">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"></script>
 <script language="javascript" type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
 <script type="text/javascript" src="lib/box2d.umd.js"></script>
